--- a/chat.html
+++ b/chat.html
@@ -26,7 +26,7 @@
         <li><a href="activity.html" id="act" class="navlink">ACTIVITY</a></li>
         <li><a href="chat.html" id="contact" class="navlink">DISCUSS</a></li>
         <li><a href="feedback.html" id="elib" class="navlink">FEEDBACK</a></li>
-        <li><a href="./" id="log" class="navlink" style="padding: 10px 16px"><i style="padding: 0px"
+        <li><a href="index.html" id="log" class="navlink" style="padding: 10px 16px"><i style="padding: 0px"
               class="fas fa-power-off"></i></a></li>
         <li><a href="javascript:void(0);" class="navlink icon" onclick="formatnav()"><i class="fas fa-bars"></i></a>
         </li>
